--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@browserbasehq/stagehand",
+  "name": "fork-of-dont-use-stagehand",
   "version": "1.12.0",
   "description": "An AI web browsing framework focused on simplicity and extensibility.",
   "main": "./dist/index.js",
